test/assets/invalid/string-to-num/expect-integer.hs
a :: Integer -> Bool
a = even

b :: Bool
b = a "42"